Criei parcialmente a estrutura base do HTML.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,20 @@
     <title>Responsividade</title>
 </head>
 <body>
-    <h1>Titulo</h1>
-    <p>Este site é responsivo</p>
+    <header>
+        <nav>
+
+        </nav>
+    </header>
+    <main>
+        <section>
+            <div>
+                
+            </div>
+            <div>
+
+            </div>
+        </section>
+    </main>
 </body>
 </html>
