Site parcialmente feito

--- a/index.html
+++ b/index.html
@@ -9,19 +9,40 @@
 </head>
 <body>
     <header>
-        <nav>
-
-        </nav>
+        
     </header>
-    <main>
-        <section>
-            <div>
-                
+    <main class="content">
+        <section class="section">
+            <div class="content-div">
+                <p class="content-text-section1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro, a? Rem fuga placeat explicabo nulla aspernatur id iusto. Illo libero culpa sapiente? Error vero voluptatibus hic qui, praesentium dolorum consectetur?</p>
+                <img class="imgsection1" src="./assets/img/Foto 1.png" alt="Aqui tem uma imagem">
             </div>
-            <div>
-
+            <div class="content-div">
+                <img class="imgsection1" src="./assets/img/Foto 2.png" alt="Aqui tem uma imagem">
+                <p class="content-text-section1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro, a? Rem fuga placeat explicabo nulla aspernatur id iusto. Illo libero culpa sapiente? Error vero voluptatibus hic qui, praesentium dolorum consectetur?</p>
+            </div>
+            <div class="content-div">
+                <p class="content-text-section1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro, a? Rem fuga placeat explicabo nulla aspernatur id iusto. Illo libero culpa sapiente? Error vero voluptatibus hic qui, praesentium dolorum consectetur?</p>
+                <img class="imgsection1" src="./assets/img/Foto 3.png" alt="Aqui tem uma imagem">
+            </div>
+        </section>
+        <section class="section">
+            <div class="title">
+                <h1>Responsividade</h1>
+            </div>
+            <div class="article">
+                <article>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro, a? Rem fuga placeat explicabo nulla aspernatur id iusto. Illo libero culpa sapiente? Error vero voluptatibus hic qui, praesentium dolorum consectetur? Lorem ipsum dolor, sit amet consectetur adipisicing elit. Et voluptas ad assumenda, voluptatem doloremque laudantium impedit tempora deleniti odit animi similique! Aliquid, ullam. Impedit, laborum cum? Nihil modi provident asperiores. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Et voluptas ad assumenda, voluptatem doloremque laudantium impedit tempora deleniti odit animi similique! Aliquid, ullam. Impedit, laborum cum? Nihil modi provident asperiores.</p>
+                </article>
             </div>
         </section>
     </main>
+    <footer class="footer">
+        <a href="https://www.facebook.com/profile.php?id=100083841774054" target="_blank" hreflang="pt-br" rel="external"><img src="./assets/img/facebook.png" alt="Facebook"></a>
+        <a href="https://github.com/guti-oliveira" target="_blank" hreflang="pt-br" rel="external"><img src="./assets/img/github.png" alt="GitHub"></a>
+        <a href="https://www.instagram.com/gutierrezarcanjodeoliveira/" target="_blank" hreflang="pt-br" rel="external"><img src="./assets/img/instagram.png" alt="Instagram"></a>
+        <a href="https://www.linkedin.com/in/gutierrez-oliveira-a19872250/" target="_blank" hreflang="pt-br" rel="external"><img src="./assets/img/linkedin.png" alt="Linkedin"></a>
+        <a href="https://wa.me/5511982029471" target="_blank" hreflang="pt-br" rel="external"><img src="./assets/img/whatsapp.png" alt="Whatsapp"></a>
+    </footer>
 </body>
 </html>
