--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="./assets/img/pinceis-de-maquiagem.png" type="image/x-icon">
     <link rel="stylesheet" href="/assets/style/style.css">
-    <title>Responsividade</title>
+    <title>Espaço da Mulher</title>
 </head>
 <body>
     <header>
@@ -15,20 +16,23 @@
         <section class="section">
             <div class="content-div">
                 <p class="content-text-section1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro, a? Rem fuga placeat explicabo nulla aspernatur id iusto. Illo libero culpa sapiente? Error vero voluptatibus hic qui, praesentium dolorum consectetur?</p>
-                <img class="imgsection1" src="./assets/img/Foto 1.png" alt="Aqui tem uma imagem">
+                <img class="imgsection1" src="./assets/img/beauty-portrait-of-mystery-smiling-ginger-woman-with-long-hair-looking-away-while-applying-cosmetics-with-brush-for-eyeshadow.jpg" alt="Aqui tem uma imagem">
+                <aside><p>Imagem de<a href="https://br.freepik.com/fotos-gratis/retrato-da-beleza-do-misterio-sorridente-mulher-ruiva-com-cabelos-longos-olhando-para-longe-enquanto-aplica-cosmeticos-com-pincel-para-sombra_6514849.htm#query=maquiagem&position=15&from_view=search&track=sph" target="_blank" hreflang="en" rel="external"> drobotdean</a> no Freepik</p></aside>
             </div>
             <div class="content-div">
-                <img class="imgsection1" src="./assets/img/Foto 2.png" alt="Aqui tem uma imagem">
+                <aside><p>Imagem de<a href="https://br.freepik.com/fotos-gratis/feche-o-retrato-de-uma-jovem-mulher-bonita-isolada_12947947.htm#&position=6&from_view=popular" target="_blank" hreflang="en" rel="external"> wayhomestudio</a> no Freepik</p></aside> 
+                <img class="imgsection1" src="./assets/img/close-up-portrait-of-young-beautiful-woman-isolated.jpg" alt="Aqui tem uma imagem">  
                 <p class="content-text-section1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro, a? Rem fuga placeat explicabo nulla aspernatur id iusto. Illo libero culpa sapiente? Error vero voluptatibus hic qui, praesentium dolorum consectetur?</p>
             </div>
             <div class="content-div">
                 <p class="content-text-section1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro, a? Rem fuga placeat explicabo nulla aspernatur id iusto. Illo libero culpa sapiente? Error vero voluptatibus hic qui, praesentium dolorum consectetur?</p>
-                <img class="imgsection1" src="./assets/img/Foto 3.png" alt="Aqui tem uma imagem">
+                <img class="imgsection1" src="./assets/img/close-up-collection-of-make-up-and-beauty-products.jpg" alt="Aqui tem uma imagem">
+                <aside><p>Imagem de <a href="https://br.freepik.com/fotos-gratis/colecao-close-up-de-produtos-de-maquiagem-e-beleza_9377046.htm#query=maquiagem&position=1&from_view=search&track=sph" target="_blank" hreflang="en" rel="external">Freepik</a></p></aside>
             </div>
         </section>
         <section class="section">
             <div class="title">
-                <h1>Responsividade</h1>
+                <h1>Espaço da Mulher</h1>
             </div>
             <div class="article">
                 <article>
@@ -37,6 +41,12 @@
             </div>
         </section>
     </main>
+    <aside class="conteudo-paralelo">
+        <h1 class="conteudo-paralelo-titulo">Confira nosso artigo sobre produtos para pele!</h1>
+        <img class="aside-image" src="./assets/img/cosmetic-products-with-salt-toothbrush-razor-hairbrush-leaves-white-backdrop.jpg" alt="">
+        <aside><p>Image by <a href="https://www.freepik.com/free-photo/cosmetic-products-with-salt-toothbrush-razor-hairbrush-leaves-white-backdrop_3148320.htm#query=higiene&position=33&from_view=search&track=sph" target="_blank" hreflang="en" rel="external">Freepik</a></p></aside>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro, a? Rem fuga placeat explicabo nulla aspernatur id iusto. Illo libero culpa sapiente? Error vero voluptatibus hic qui, praesentium dolorum consectetur? Lorem ipsum dolor, sit amet consectetur adipisicing elit. Et voluptas ad assumenda, voluptatem doloremque laudantium impedit tempora deleniti odit animi similique! Aliquid, ullam. Impedit, laborum cum? Nihil modi provident asperiores. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Et voluptas ad assumenda, voluptatem doloremque laudantium impedit tempora deleniti odit animi similique! Aliquid, ullam. Impedit, laborum cum? Nihil modi provident asperiores. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi impedit, officia delectus itaque sapiente omnis maiores fuga quo saepe modi veniam tempore repellat quibusdam expedita non odit at atque mollitia! Lorem ipsum dolor sit amet consectetur adipisicing elit. Error, expedita minus repudiandae illo odit quibusdam quae cum iusto corporis sapiente! Suscipit id fuga saepe quibusdam necessitatibus accusantium sint iure asperiores. Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti, veniam aperiam neque odio ipsa error! Voluptatibus debitis iste illo eum, aliquid expedita, nisi voluptate velit aspernatur error nostrum doloribus officiis. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Hic perferendis accusamus, nesciunt, maiores illum sed nisi minima suscipit sapiente expedita voluptates magni ex vitae! Inventore culpa voluptate debitis blanditiis optio! Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta mollitia cupiditate nemo, cum velit voluptates a nobis? Dignissimos omnis ipsam quasi reprehenderit voluptas tempora, maxime maiores eum hic. Deserunt, incidunt.</p>
+    </aside>
     <footer class="footer">
         <a href="https://www.facebook.com/profile.php?id=100083841774054" target="_blank" hreflang="pt-br" rel="external"><img src="./assets/img/facebook.png" alt="Facebook"></a>
         <a href="https://github.com/guti-oliveira" target="_blank" hreflang="pt-br" rel="external"><img src="./assets/img/github.png" alt="GitHub"></a>
