Atualizei o texto e mudei umas coisas

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="./assets/img/pinceis-de-maquiagem.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./assets/img/sobrancelha.png" type="image/x-icon">
     <link rel="stylesheet" href="/assets/style/style.css">
     <title>Espaço da Mulher</title>
 </head>
@@ -42,7 +42,7 @@
         </section>
     </main>
     <aside class="conteudo-paralelo">
-        <h1 class="conteudo-paralelo-titulo">Confira nosso artigo sobre produtos para pele!</h1>
+        <h1 class="conteudo-paralelo-titulo">Confira também nosso artigo sobre Higiene!</h1>
         <img class="aside-image" src="./assets/img/cosmetic-products-with-salt-toothbrush-razor-hairbrush-leaves-white-backdrop.jpg" alt="">
         <aside><p>Image by <a href="https://www.freepik.com/free-photo/cosmetic-products-with-salt-toothbrush-razor-hairbrush-leaves-white-backdrop_3148320.htm#query=higiene&position=33&from_view=search&track=sph" target="_blank" hreflang="en" rel="external">Freepik</a></p></aside>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro, a? Rem fuga placeat explicabo nulla aspernatur id iusto. Illo libero culpa sapiente? Error vero voluptatibus hic qui, praesentium dolorum consectetur? Lorem ipsum dolor, sit amet consectetur adipisicing elit. Et voluptas ad assumenda, voluptatem doloremque laudantium impedit tempora deleniti odit animi similique! Aliquid, ullam. Impedit, laborum cum? Nihil modi provident asperiores. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Et voluptas ad assumenda, voluptatem doloremque laudantium impedit tempora deleniti odit animi similique! Aliquid, ullam. Impedit, laborum cum? Nihil modi provident asperiores. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi impedit, officia delectus itaque sapiente omnis maiores fuga quo saepe modi veniam tempore repellat quibusdam expedita non odit at atque mollitia! Lorem ipsum dolor sit amet consectetur adipisicing elit. Error, expedita minus repudiandae illo odit quibusdam quae cum iusto corporis sapiente! Suscipit id fuga saepe quibusdam necessitatibus accusantium sint iure asperiores. Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti, veniam aperiam neque odio ipsa error! Voluptatibus debitis iste illo eum, aliquid expedita, nisi voluptate velit aspernatur error nostrum doloribus officiis. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Hic perferendis accusamus, nesciunt, maiores illum sed nisi minima suscipit sapiente expedita voluptates magni ex vitae! Inventore culpa voluptate debitis blanditiis optio! Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta mollitia cupiditate nemo, cum velit voluptates a nobis? Dignissimos omnis ipsam quasi reprehenderit voluptas tempora, maxime maiores eum hic. Deserunt, incidunt.</p>
