Deixei responsivo para Galaxy Fold

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             </div>
         </section>
         <section class="section section-2">
-            <div class="title content">
+            <div class="title">
                 <h1>Espaço da Mulher</h1>
             </div>
             <div class="article">
